--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.64.2"
+  },
+  "devDependencies": {
+    "gatsby-plugin-google-fonts": "^1.0.1"
   }
 }
